@@ -116,31 +116,44 @@ libgnome_userdir_setup(gboolean create_dirs)
   if(!create_dirs)
     return;
 	
-  if(
-     mkdir(gnome_user_dir, 0700) /* This is per-user info
-				    - no need for others to see it */
-     && errno != EEXIST)
-    g_error("Could not create per-user Gnome directory <%s> - aborting\n",
-	    gnome_user_dir);
+  if (mkdir(gnome_user_dir, 0700) < 0) { /* private permissions, but we
+                                            don't check that we got them */
+    if (errno != EEXIST) {
+      fprintf(stderr, _("Could not create per-user gnome configuration directory `%s': %s\n"),
+              gnome_user_dir, strerror(errno));
+      exit(1);
+    }
+  }
 
-  if(
-     mkdir(gnome_user_private_dir, 0700) /* This is private per-user info
-					    mode 700 will be enforced!
-					    maybe even other security
-					    meassures will be taken */
-     && errno != EEXIST)
-    g_error("Could not create private per-user Gnome directory <%s> - aborting\n",
-	    gnome_user_private_dir);
-  if(
-     mkdir(gnome_user_accels_dir, 0700) /* This is per-user info
-					   - no need for others to see it */
-     && errno != EEXIST)
-    g_error("Could not create per-user Gnome directory <%s> - aborting\n",
-	    gnome_user_accels_dir);
+  if(mkdir(gnome_user_private_dir, 0700) < 0) { /* This is private
+                                                  per-user info mode
+                                                  700 will be
+                                                  enforced!  maybe
+                                                  even other security
+                                                  meassures will be
+                                                  taken */
+    if (errno != EEXIST) {
+      fprintf(stderr, _("Could not create per-user gnome configuration directory `%s': %s\n"),
+              gnome_user_private_dir, strerror(errno));
+      exit(1);
+    }
+  }
+
 
   /* change mode to 0700 on the private directory */
-  if (chmod (gnome_user_private_dir, 0700) != 0)
-    g_error (
-	     "Could not set mode 0700 on private per-user Gnome directory <%s> - aborting\n",
-	     gnome_user_private_dir);
+  if (chmod (gnome_user_private_dir, 0700) < 0) {
+    fprintf(stderr, _("Could not set mode 0700 on private per-user gnome configuration directory `%s': %s\n"),
+            gnome_user_private_dir, strerror(errno));
+    exit(1);
+  }
+  
+  if (mkdir(gnome_user_accels_dir, 0700) < 0) {
+    if (errno != EEXIST) {
+      fprintf(stderr, _("Could not create gnome accelerators directory `%s': %s\n"),
+              gnome_user_accels_dir, strerror(errno));
+      exit(1);
+    }
+  }
 }
+
+
